# manager-universal

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  claude_desktop_config.example.json  doctor.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  supply-chain.yml
examples/: delegate_a_coding_task.md  health_enum_interpretation.md  parallel_workflow.md  task_rerun_workflow.md
mcpb/: README.md  manifest.json
scripts/: open_dashboard.cmd
skills/: manager-recommended-instructions.md  manager-with-local-recommended-instructions.md  manager-with-local.md
skills/manager/: skill.md
skills/manager-getting-started/: SKILL.md
src/: analyzer.rs  dashboard_ui.html  main.rs
