[package]
name = "manager-universal"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Multi-AI delegation orchestrator MCP server - universal distribution with v1.4 reliability fixes. Routes coding tasks across Claude Code, Codex, and Gemini with retry, rollback, and dashboard."
repository = "https://github.com/AIWander/manager-universal"
readme = "README.md"
keywords = ["mcp", "orchestrator", "delegation", "ai", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.32"
regex = "1"
rand = "0.8"
serde_yaml = "0.9"
once_cell = "1.18"
cpc-paths = { git = "https://github.com/AIWander/cpc-paths", tag = "v0.1.1" }

[dev-dependencies]
tempfile = "3"
